navbar position now fixed on mobile for now

--- a/sass/components/custom/_nav.scss
+++ b/sass/components/custom/_nav.scss
@@ -105,6 +105,7 @@ html {
 
 @media screen and (max-width: 705px){
   .my-nav {
+    position: fixed;
     z-index: 1000;
     .nav-side {
       width: 80%;
@@ -127,6 +128,10 @@ html {
       // position: absolute;
 
     }
+  }
+  .navTop {
+    bottom: 0;
+    top: auto;
   }
 }
 
